# Aerosol3D

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml  lint.yml  publish.yml
aerosol3d/core/: material.py
aerosol3d/geometry/: boolean.py
aerosol3d/modeling/: __init__.py
aerosol3d/optics/: __init__.py  bridge.py  datastructs.py  dda_solver.py  visualization.py
core/: aggregate.py  component.py  material.py  particle.py
docs/: conf.py  contributing.rst  index.rst  sphinx-documentation-design.md
docs/api-reference/: bulk.rst  core.rst  geometry.rst  index.rst  io.rst  modeling.rst  optics.rst  vsmartmom.rst
docs/superpowers/plans/: 2026-05-24-ldr-polarizability-and-precision.md
docs/tutorials/: black-carbon-sphere.rst  bulk-cross-validation.rst  bulk-optics-workflow.rst  coated-fractal-aggregate.rst  coated-particle.rst  dda-mie-pyradtran-pipeline.rst  fractal-aggregate.rst  index.rst  mie-vs-dda-validation.rst  vsmartmom-rt-workflow.rst
docs/user-guide/: bulk-aerosol-optics.rst  coating-models.rst  ema-and-coreshell.rst  index.rst  installation.rst  optical-computation.rst  particle-geometry.rst  quickstart.rst  vsmartmom-integration.rst
examples/: README.md  black_carbon_fractal.py  black_carbon_sphere.py  bulk_cross_validation.py  bulk_method_comparison.py  coated_fractal_aggregate.py  validate_mie_vs_dda.py  vsmartmom_rt_demo.py
examples/dda_mie_pyradtran_pipeline/: README.md  compare_results.py  compute_optics.py  config.py  requirements.txt  run_radiative_transfer.py
factory/: __init__.py  mesh_importer.py  pyfrac_adapter.py
geometry/: __init__.py  primitives.py  voxelize.py
io/: __init__.py  exporter.py  vtp_writer.py
modeling/: __init__.py  cam.py  ccm.py  distance_coat.py  distance_coater.py  inclusion.py  potential_coat.py  potential_coater.py  voxelizer.py
src/Aerosol3D/: __init__.py  materials.py
src/Aerosol3D/bulk/: __init__.py  builder.py  datastructs.py  integration.py  interpolation.py  io.py  merge.py
src/Aerosol3D/core/: __init__.py  aggregate.py  ema.py  material.py  particle.py
src/Aerosol3D/factory/: mesh_importer.py  pyfrac_adapter.py
src/Aerosol3D/geometry/: __init__.py  boolean.py  primitives.py  voxelize.py
src/Aerosol3D/io/: __init__.py  exporter.py
src/Aerosol3D/modeling/: __init__.py  cam.py  ccm.py  distance_coat.py  potential_edge_coating.py  potential_void_coating.py
src/Aerosol3D/optics/: __init__.py  bridge.py  datastructs.py  dda_solver.py  legendre.py  mie_solver.py  optics_export.py  pyradtran_export.py  visualization.py
src/Aerosol3D/physics/: units.py
src/Aerosol3D/utils/: plot.py
src/Aerosol3D/vsmartmom/: __init__.py  result.py  runner.py  serialize.py
src/Aerosol3D/vsmartmom/scripts/: __init__.py  run_rt.jl
src/aerosol3d/: __init__.py  materials.py
src/aerosol3d/core/: aggregate.py  particle.py
src/aerosol3d/factory/: __init__.py  pyfrac_adapter.py
src/aerosol3d/geometry/: __init__.py  voxelize.py
src/aerosol3d/modeling/: __init__.py  cam.py  ccm.py  potential_coat.py  potential_edge_coating.py  potential_void_coating.py
src/aerosol3d/optics/: __init__.py  bridge.py  datastructs.py  dda_solver.py  legendre.py  visualization.py
src/aerosol3d/physics/: units.py
src/aerosol3d/utils/: plot.py
tests/: conftest.py  test_aggregate.py  test_boolean.py  test_bridge.py  test_bulk_builder.py  test_bulk_interpolation.py  test_bulk_io.py  test_bulk_merge.py  test_bulk_physics.py  test_bulk_size_distribution.py  test_cam.py  test_ccm.py  test_datastructs.py  test_dda_solver.py  test_distance_coat.py  test_ema.py  test_exporter.py  test_extract_dipoles.py  test_integration.py  test_legendre.py  test_material.py  test_materials.py  test_mesh_importer.py  test_mie_coreshell.py  test_mie_solver.py  test_multi_wavelength.py  test_optics_export.py  test_optics_integration.py  test_optics_vis_new.py  test_optics_visualization.py  test_orientational_average.py  test_particle.py  test_particle_properties.py  test_plot.py  test_potential_coat.py  test_potential_edge_coating.py  test_potential_void_coating.py  test_primitives.py  test_public_api.py  test_pyfrac_adapter.py  (+2 more)
tests/vsmartmom/: __init__.py  test_result.py  test_runner.py  test_serialize.py
utils/: plot.py
