[project]
name = "aerosol3d"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pyvista>=0.44",
    "manifold3d",
    "pint",
    "scipy",
    "pyjulia",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "matplotlib"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]